# yuraive

./: .editorconfig  .fdroid.yml  .gitignore  .prettierignore  .prettierrc.json  LICENSE  README.md  mise.toml  package-lock.json  package.json  rust-toolchain.toml
.github/workflows/: android-fdroid.yml  editor-deploy.yml  skills-check.yml  skills-release.yml  windows-store-package.yml
ai/custom-gpt/: bundle.json  configuration.json  instructions.md
ai/scripts/: bundle-lib.mjs  bundle-lib.test.mjs  bundle.mjs  update-skill-downloads.mjs  validate-bundle.mjs
ai/skill/: SKILL.md  bundle.json
ai/tests/: test_yuraive_tools.py
assets/: YuraiveFlow.astro
connect/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json  wrangler.jsonc
connect/src/: index.ts
design/: PLAYBACK_STATS.md  YURAIVE_v1_SPEC.md
docs/: README.md  astro.config.mjs  package-lock.json  package.json  wrangler.jsonc
editor/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts  wrangler.jsonc
editor/public/: site.webmanifest
editor/src/: App.css  App.tsx  LayoutEditor.tsx  LayoutFrame.tsx  PlaybackStatsPreview.tsx  Preview.tsx  ScriptEditor.tsx  ScriptInspector.tsx  bundle.ts  contentInspection.ts  graph.ts  graphOperations.ts  index.css  layout.ts  nativeDirectory.ts  scriptContext.ts  starlark.ts  starlark.worker.ts  (+2 more)
player/: .gitignore  README.md  settings.gradle.kts
player-android/: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
player-windows/: README.md  WmgfPlayer.Windows.slnx  Yuraive.Windows.slnx
runtime/: BUNDLE_FORMAT.md  Cargo.toml  README.md  build-android.sh
runtime/src/: bundle.rs  ffi.rs  layout_engine.rs  lib.rs  script_engine.rs  tests.rs  validation.rs
runtime/src/layout_engine/: length.rs  model.rs  parser.rs  style.rs  taffy.rs  tests.rs
runtime/src/p2p/: cache.rs  client.rs  ffi.rs  host.rs  mod.rs  protocol.rs  signaling.rs  transport.rs
website/: .gitignore  README.md  astro.config.mjs  package-lock.json  package.json  wrangler.jsonc
(+220 files in other folders)
