[package]
name = "wmgf-runtime"
version = "1.0.0"
edition = "2021"

[lib]
name = "wmgf_runtime"
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.100"
fastrand = "2.3.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
starlark = "0.14.2"
taffy = { version = "0.12.1", features = ["parse", "serde"] }
unicode-width = "0.2.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
jni = "0.21.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.4.3", features = ["wasm_js"] }
js-sys = "0.3.83"
wasm-bindgen = "0.2.106"

[profile.release]
lto = "thin"
codegen-units = 1
