[package]
name = "yuraive-runtime"
version = "1.0.0"
edition = "2024"
license = "MIT"

[lib]
name = "yuraive_runtime"
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.100"
fastrand = "2.3.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
starlark = "0.14.2"
taffy = { version = "0.12.1", features = ["parse", "serde"] }
unicode-width = "0.2.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
base64 = "0.22.1"
crossbeam-channel = "0.5.15"
dashmap = "6.1.0"
futures-util = "0.3.31"
getrandom = "0.4.3"
hmac = "0.12.1"
if-addrs = "0.14.0"
jni = "0.21.1"
postcard = { version = "1.1.3", features = ["alloc"] }
quinn = "0.11.9"
rcgen = "0.14.5"
rustls = { version = "0.23.35", default-features = false, features = ["ring", "std"] }
sha2 = "0.10.9"
tokio = { version = "1.48.0", features = ["io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-webpki-roots"] }
tokio-util = "0.7.17"
url = "2.5.7"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.4.3", features = ["wasm_js"] }
js-sys = "0.3.83"
wasm-bindgen = "0.2.106"

[dev-dependencies]
tempfile = "3.23.0"

[profile.release]
lto = "thin"
codegen-units = 1
